--- a/apps/hello-world/manifest.json
+++ b/apps/hello-world/manifest.json
@@ -6,7 +6,7 @@
   },
   "paths": {
     "index.txt": {
-      "id": "zZ36UR2eLbkTI_USptyIy2TiL5FbkuDylb-AT_jx6js"
+      "id": "test-1760401124239-0"
     }
   }
 }
