--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -23,17 +23,12 @@ on:
         description: 'Custom message (optional)'
         required: false
         type: string
-  workflow_run:
-    workflows: ["🚀 Deploy to Arweave"]
-    types: [completed]
-    branches: [main]
 
 jobs:
   announce:
     runs-on: ubuntu-latest
-    # Only run if the deploy workflow succeeded or manual trigger
-    # Note: workflow_run trigger will be further validated by checking for deployment hash
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    # Only run on manual trigger (workflow_dispatch)
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     permissions:
       contents: read
     steps:
@@ -66,86 +61,33 @@ jobs:
       - name: 📊 Get Deployment Information
         id: deployment
         run: |
-          echo "🔍 Determining deployment information..."
+          echo "🔍 Getting deployment information from workflow inputs..."
           
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "📝 Manual trigger detected"
-            echo "hash=${{ github.event.inputs.deployment_hash }}" >> $GITHUB_OUTPUT
-            echo "file_path=${{ github.event.inputs.file_path }}" >> $GITHUB_OUTPUT
-            echo "message=${{ github.event.inputs.custom_message }}" >> $GITHUB_OUTPUT
-            echo "trigger=manual" >> $GITHUB_OUTPUT
-            
-            # Also try to get manifest TX ID from logs for manual triggers
-            if [ -f "logs/deployments.json" ]; then
-              MANIFEST_TX_ID=$(node -e "
-                const fs = require('fs');
-                try {
-                  const logs = JSON.parse(fs.readFileSync('logs/deployments.json', 'utf8'));
-                  const latest = logs[logs.length - 1];
-                  console.log(latest?.manifestTxId || latest?.txId || '');
-                } catch (e) {
-                  console.log('');
-                }
-              ")
-              if [ -n "$MANIFEST_TX_ID" ]; then
-                echo "manifest_tx_id=$MANIFEST_TX_ID" >> $GITHUB_OUTPUT
-                echo "📋 Found manifest TX ID: $MANIFEST_TX_ID"
-              else
-                echo "manifest_tx_id=" >> $GITHUB_OUTPUT
-              fi
+          echo "hash=${{ github.event.inputs.deployment_hash }}" >> $GITHUB_OUTPUT
+          echo "file_path=${{ github.event.inputs.file_path }}" >> $GITHUB_OUTPUT
+          echo "message=${{ github.event.inputs.custom_message }}" >> $GITHUB_OUTPUT
+          echo "trigger=workflow_dispatch" >> $GITHUB_OUTPUT
+          
+          # Try to get manifest TX ID from logs for additional context
+          if [ -f "logs/deployments.json" ]; then
+            MANIFEST_TX_ID=$(node -e "
+              const fs = require('fs');
+              try {
+                const logs = JSON.parse(fs.readFileSync('logs/deployments.json', 'utf8'));
+                const latest = logs[logs.length - 1];
+                console.log(latest?.manifestTxId || latest?.txId || '');
+              } catch (e) {
+                console.log('');
+              }
+            ")
+            if [ -n "$MANIFEST_TX_ID" ]; then
+              echo "manifest_tx_id=$MANIFEST_TX_ID" >> $GITHUB_OUTPUT
+              echo "📋 Found manifest TX ID: $MANIFEST_TX_ID"
             else
               echo "manifest_tx_id=" >> $GITHUB_OUTPUT
             fi
           else
-            echo "🔄 Workflow run trigger detected"
-            # Try to get the latest deployment hash and file path from logs
-            if [ -f "logs/deployments.json" ]; then
-              DEPLOYMENT_INFO=$(node -e "
-                const fs = require('fs');
-                try {
-                  const logs = JSON.parse(fs.readFileSync('logs/deployments.json', 'utf8'));
-                  const latest = logs[logs.length - 1];
-                  if (latest && latest.success && (latest.undername || latest.commitHash)) {
-                    console.log(JSON.stringify({
-                      hash: latest.undername || latest.commitHash,
-                      filePath: latest.filePath || 'unknown',
-                      manifestTxId: latest.manifestTxId || latest.txId || 'unknown'
-                    }));
-                  } else {
-                    console.log('');
-                  }
-                } catch (e) {
-                  console.log('');
-                }
-              ")
-              
-              if [ -n "$DEPLOYMENT_INFO" ]; then
-                DEPLOYMENT_HASH=$(echo "$DEPLOYMENT_INFO" | node -e "const data = JSON.parse(require('fs').readFileSync(0, 'utf-8')); console.log(data.hash);")
-                FILE_PATH=$(echo "$DEPLOYMENT_INFO" | node -e "const data = JSON.parse(require('fs').readFileSync(0, 'utf-8')); console.log(data.filePath);")
-                MANIFEST_TX_ID=$(echo "$DEPLOYMENT_INFO" | node -e "const data = JSON.parse(require('fs').readFileSync(0, 'utf-8')); console.log(data.manifestTxId);")
-                
-                echo "hash=$DEPLOYMENT_HASH" >> $GITHUB_OUTPUT
-                echo "file_path=$FILE_PATH" >> $GITHUB_OUTPUT
-                echo "manifest_tx_id=$MANIFEST_TX_ID" >> $GITHUB_OUTPUT
-                echo "message=" >> $GITHUB_OUTPUT
-                echo "trigger=workflow_run" >> $GITHUB_OUTPUT
-                echo "📁 Detected file: $FILE_PATH"
-                echo "🔑 Found deployment hash: $DEPLOYMENT_HASH"
-                echo "📋 Found manifest TX ID: $MANIFEST_TX_ID"
-              else
-                echo "hash=" >> $GITHUB_OUTPUT
-                echo "file_path=" >> $GITHUB_OUTPUT
-                echo "message=" >> $GITHUB_OUTPUT
-                echo "trigger=workflow_run" >> $GITHUB_OUTPUT
-                echo "⚠️ No deployment hash found in logs"
-              fi
-            else
-              echo "hash=" >> $GITHUB_OUTPUT
-              echo "file_path=" >> $GITHUB_OUTPUT
-              echo "message=" >> $GITHUB_OUTPUT
-              echo "trigger=workflow_run" >> $GITHUB_OUTPUT
-              echo "⚠️ No deployment logs found"
-            fi
+            echo "manifest_tx_id=" >> $GITHUB_OUTPUT
           fi
 
       - name: 🔍 Check if deployment occurred
