--- a/apps/arcade/manifest.json
+++ b/apps/arcade/manifest.json
@@ -22,6 +22,9 @@
     },
     "style.css": {
       "id": "qz5GUCcfNpvj4oB_PqxrHgN2hNsEZjzG8z2v1i5XoDU"
+    },
+    "space-invaders.html": {
+      "id": "m76ms4w9Bs1POSThFhcwwluQjPEGjLO8W3Pcx8UkSAA"
     }
   }
 }
