Add Memory Match game and enhance arcade with new animations
- Added new Memory Match game with 3 difficulty levels
- Enhanced animations.css with memory game specific effects
- Updated index.html to include Memory Match game card
- Updated manifest.json to version 0.3.0 with new game
- Added high score tracking for Memory Match game

--- a/apps/arcade/manifest.json
+++ b/apps/arcade/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest": "arweave/paths",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "index": {
     "path": "index.html"
   },
@@ -28,6 +28,9 @@
     },
     "animations.css": {
       "id": "lAyYCerj1tHWHAiBwZW5Cs-HNbUPlMFVc0TRmc52MBk"
+    },
+    "memory-match.html": {
+      "id": "placeholder-memory-match-id"
     }
   }
 }
