--- a/apps/hello-world/manifest.json
+++ b/apps/hello-world/manifest.json
@@ -6,7 +6,7 @@
   },
   "paths": {
     "index.txt": {
-      "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
+      "id": "test-1760467522792-0"
     }
   }
 }
