Fix logging file deletion bug

--- a/apps/arcade/manifest.json
+++ b/apps/arcade/manifest.json
@@ -9,7 +9,7 @@
       "id": "Zbk69BWVTE91JTcY0vBtQcRBpPtxDsHU9cq-gFM6RmM"
     },
     "index.html": {
-      "id": "GksmhhQA2HgpYNvSi2WRIFeSnSWSUyKntDICskUsGmI"
+      "id": "test-1760468808924-0"
     },
     "pixel-runner.html": {
       "id": "zMBQX302bnDhgPDYCh5wGl-T_6QP7oWxpS7XEe2QNM8"
