Add shared Turbo credit support

--- a/env.example
+++ b/env.example
@@ -19,6 +19,11 @@ DEFAULT_TTL_SECONDS=60          # for undername TTL (alternative)
 TURBO_PAYMENT_SERVICE_URL=https://payment.ardrive.dev
 TURBO_UPLOAD_SERVICE_URL=https://upload.ardrive.dev
 
+# Shared Credits Configuration (for using credits shared by other wallets)
+# Enable automatic shared credits usage - SDK will automatically find and use available
+# credit share approvals (closest to expiration first, then lowest amounts, then signer's balance)
+TURBO_USE_SHARED_CREDITS=true
+
 # Application Configuration
 APP_NAME=RemoteAgentDeploy
 ARWEAVE_GATEWAY=https://arweave.net
