Maybe fix shared credit usage

--- a/env.example
+++ b/env.example
@@ -24,6 +24,10 @@ TURBO_UPLOAD_SERVICE_URL=https://upload.ardrive.dev
 # credit share approvals (closest to expiration first, then lowest amounts, then signer's balance)
 TURBO_USE_SHARED_CREDITS=true
 
+# Optional: Specify wallet addresses that have shared credits with this wallet
+# If not set, will try using your own wallet address to trigger shared credits lookup
+# TURBO_SHARED_CREDITS_PAID_BY=2cor...VUa,1abc...XYZ,3def...GHI
+
 # Application Configuration
 APP_NAME=RemoteAgentDeploy
 ARWEAVE_GATEWAY=https://arweave.net
