--- a/apps/hello-world/manifest.json
+++ b/apps/hello-world/manifest.json
@@ -8,8 +8,8 @@
     "hello-world.txt": {
       "id": "M-qbGiEk0PZ6jl9IaGySWAiIQ85WZY8n2hvRyfCZza0"
     },
-    "index2.txt": {
-      "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
+    "gm.txt": {
+      "id": "M-qbGiEk0PZ6jl9IaGySWAiIQ85WZY8n2hvRyfCZza0"
     }
   }
 }
