Fix auto merge bug

--- a/env.example
+++ b/env.example
@@ -37,3 +37,8 @@ DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOO
 
 # GitHub API (for triggering workflows and auto-merge)
 REPO_TOKEN=your_github_personal_access_token
+
+# Auto-merge Configuration
+# Comma-separated list of trusted GitHub usernames who can trigger auto-merge
+# Example: TRUSTED_USERS=JonnieSparkles,AnotherUser,ThirdUser
+TRUSTED_USERS=JonnieSparkles
