--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -8,8 +8,8 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    # Only run for PRs from cursor/ branches created by trusted users
-    if: startsWith(github.head_ref, 'cursor/') && github.actor == 'JonnieSparkles'
+    # Only run for PRs from cursor/ branches
+    if: startsWith(github.head_ref, 'cursor/')
     permissions:
       contents: write
       pull-requests: write
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,13 +28,44 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check Trusted User
+        run: |
+          echo "🔍 Checking if user '${{ github.actor }}' is in trusted users list..."
+          if [[ "${{ secrets.TRUSTED_USERS }}" == *"${{ github.actor }}"* ]]; then
+            echo "✅ User '${{ github.actor }}' is trusted"
+            echo "is_trusted=true" >> $GITHUB_OUTPUT
+          else
+            echo "❌ User '${{ github.actor }}' is not in trusted users list"
+            echo "is_trusted=false" >> $GITHUB_OUTPUT
+            echo "Trusted users: ${{ secrets.TRUSTED_USERS }}"
+            exit 1
+          fi
+
+      - name: Setup Git References
+        run: |
+          echo "🔧 Setting up git references..."
+          git fetch origin main
+          git branch -r
+          echo "✅ Git references ready"
+
       - name: Check for Apps Changes
         id: check-apps-changes
         run: |
           echo "🔍 Checking if this PR contains changes to apps/ directory..."
           
-          # Get the list of changed files in this PR
-          CHANGED_FILES=$(git diff --name-only origin/main...HEAD)
+          # Get the list of changed files in this PR using GitHub Actions context
+          # Use the base and head refs from the PR context
+          BASE_REF="${{ github.event.pull_request.base.ref }}"
+          HEAD_REF="${{ github.event.pull_request.head.ref }}"
+          
+          echo "Base ref: $BASE_REF"
+          echo "Head ref: $HEAD_REF"
+          
+          # Fetch the base branch to ensure we have the reference
+          git fetch origin $BASE_REF
+          
+          # Get changed files using the proper git references
+          CHANGED_FILES=$(git diff --name-only origin/$BASE_REF...HEAD)
           echo "Changed files in PR: $CHANGED_FILES"
           
           # Check if any files in apps/ directory were changed
