--- a/env.example
+++ b/env.example
@@ -42,3 +42,8 @@ REPO_TOKEN=your_github_personal_access_token
 # Comma-separated list of trusted GitHub usernames who can trigger auto-merge
 # Example: TRUSTED_USERS=JonnieSparkles,AnotherUser,ThirdUser
 TRUSTED_USERS=JonnieSparkles
+
+# Agent Branch Prefix Configuration
+# Prefix for branches created by AI agents (auto-merge workflow only processes these)
+# Examples: AGENT_BRANCH_PREFIX=cursor/, AGENT_BRANCH_PREFIX=ai/, AGENT_BRANCH_PREFIX=bot/
+AGENT_BRANCH_PREFIX=cursor/
