--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "remote-agent-deployment",
+  "name": "app-factory-agentic-deployment",
   "version": "1.0.0",
-  "description": "Simple deployment system for deploying files to Arweave with ArNS integration",
+  "description": "App-Factory (Dynamic Agentic Deployment System) - Simple deployment system for deploying files to Arweave with ArNS integration",
   "type": "module",
   "main": "deploy.js",
   "scripts": {
@@ -16,7 +16,8 @@
     "arweave",
     "turbo",
     "arns",
-    "remote-agent",
+    "app-factory",
+    "agentic",
     "deployment"
   ],
   "author": "",
