--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "author": "JonnieSparkles",
   "license": "MIT",
   "dependencies": {
-    "@ardrive/turbo-sdk": "^1.32.0",
     "@ar.io/sdk": "^3.21.0",
-    "dotenv": "^16.3.1"
+    "@ardrive/turbo-sdk": "^1.32.0",
+    "@octokit/rest": "^20.1.2",
+    "dotenv": "^16.3.1",
+    "isomorphic-git": "^1.34.0"
   },
   "engines": {
     "node": ">=18.0.0"
