--- a/apps/hello-world/manifest.json
+++ b/apps/hello-world/manifest.json
@@ -6,9 +6,9 @@
   },
   "paths": {
     "hello-world.txt": {
-      "id": "_IaN-SnAl7tW2N9Qf-hEuLe0EOhJebtMuwAStkzK4ts"
+      "id": "test-1760550015923-0"
     },
-    "index2.txt": {
+    "gm.txt": {
       "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
     }
   }
