--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ar.io/sdk": "^3.21.0",
     "@ardrive/turbo-sdk": "^1.32.0",
+    "@octokit/graphql": "^7.0.2",
     "@octokit/rest": "^20.1.2",
     "dotenv": "^16.3.1",
     "isomorphic-git": "^1.34.0"
