--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@ardrive/turbo-sdk": "^1.32.0",
     "@octokit/graphql": "^7.0.2",
     "@octokit/rest": "^20.1.2",
+    "boxen": "^6.2.1",
+    "chalk": "^4.1.2",
+    "cli-table3": "^0.6.3",
     "dotenv": "^16.3.1",
-    "isomorphic-git": "^1.34.0"
+    "isomorphic-git": "^1.34.0",
+    "ora": "^5.4.1"
   },
   "engines": {
     "node": ">=18.0.0"
