--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # ArNS / AR.IO Configuration
 ANT_PROCESS_ID=XXXX        # your ArNS name's ANT/AO process id
-OWNER_ARNS_NAME=XXXX       # base ArNS name, e.g. mycoolname (no dots/underscores)
+ROOT_ARNS_NAME=XXXX       # base ArNS name, e.g. mycoolname (no dots/underscores)
 
 # Bot wallet address (for reference/transparency)
 WALLET_ADDRESS=XXXX
