--- a/apps/hello-world/manifest.json
+++ b/apps/hello-world/manifest.json
@@ -6,7 +6,7 @@
   },
   "paths": {
     "hello-world.txt": {
-      "id": "test-1760644066801-0"
+      "id": "HTUJaR8Zuszu0t0aBFAizpivm1jaPZToemk5f3B5_SE"
     },
     "gm.txt": {
       "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
