--- a/apps/hello-world/manifest-overrides.json
+++ b/apps/hello-world/manifest-overrides.json
@@ -1,3 +1,10 @@
 {
-  "gm.txt": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
+  "paths": {
+    "gm.txt": {
+      "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
+    },
+  ".folder-supported/test.txt": {
+    "id": "XXXgiubfK04Cbxd2ZElNnHUZ_OEYlIBIGrWIOOFB4OM"
+  }
+  }
 }
