Track manifest-overrides changes for deployment

--- a/apps/hello-world/manifest-overrides.json
+++ b/apps/hello-world/manifest-overrides.json
@@ -5,6 +5,9 @@
     },
   ".folder-supported/test.txt": {
     "id": "XXXgiubfK04Cbxd2ZElNnHUZ_OEYlIBIGrWIOOFB4OM"
+  },
+  "test/test.txt": {
+    "id": "XXXgiubfK04Cbxd2ZElNnHUZ_OEYlIBIGrWIOOFB4OM"
   }
   }
 }
