--- a/apps/hello-world/manifest-overrides.json
+++ b/apps/hello-world/manifest-overrides.json
@@ -3,11 +3,8 @@
     "gm.txt": {
       "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
     },
-  ".folder-supported/test.txt": {
-    "id": "XXXgiubfK04Cbxd2ZElNnHUZ_OEYlIBIGrWIOOFB4OM"
-  },
-  "test/test.txt": {
-    "id": "XXXgiubfK04Cbxd2ZElNnHUZ_OEYlIBIGrWIOOFB4OM"
+  "manifest-folder-test/gm.txt": {
+    "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
   }
   }
 }
