Finalize manifest-override revision

--- a/apps/hello-world/manifest-overrides.json
+++ b/apps/hello-world/manifest-overrides.json
@@ -3,7 +3,7 @@
     "gm.txt": {
       "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
     },
-  "manifest-folder-test/gm.txt": {
+  "manifest-folder-test/gm-gm.txt": {
     "id": "lqNBDZEEdeig-SPBM_3HIrpDfP8zy6TdjzAPK6Bg9tY"
   }
   }
