Replace hardcoded default gateway with env setting

--- a/env.example
+++ b/env.example
@@ -28,7 +28,8 @@ TURBO_USE_SHARED_CREDITS=true
 # If not set, will try using your own wallet address to trigger shared credits lookup
 # TURBO_SHARED_CREDITS_PAID_BY=2cor...VUa,1abc...XYZ,3def...GHI
 
-# Application Configuration
+# Default gateway for Arweave content (manifest URLs, deployment links)
+# Examples: https://arweave.net, https://turbo-gateway.com, or your own gateway
 ARWEAVE_GATEWAY=https://arweave.net
 
 # Optional: Discord Webhook Configuration
